--- a/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
@@ -68,8 +68,8 @@
     </div>
 
     <div class="wrapper">
-        <div class="container">
-            <div class="content">
+        <d class="container">
+            
                 <div id="hpage_latest">
                     <h2>Don't leave without checking out...</h2>
                     <ul>
@@ -85,11 +85,6 @@
                     </ul>
                     <br class="clear" />
                 </div>
-            </div>
-            <div class="column">
-                <div class="holder"><a href="#"><img src="/Content/PsychOfSleep/images/ss4.jpg" alt="" /></a></div>
-                <div class="holder"><a href="#"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a></div>
-            </div>
             <br class="clear" />
         </div>
     </div>
