--- a/ApexZero.com/Views/PsychOfSleep/SleepGame.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/SleepGame.cshtml
@@ -11,8 +11,7 @@
         <div class="err" id="noscript">
             <p><strong>ERROR: You must enable Javascript for this game to work.</strong></p>
         </div>
-        <div class="canvas" style="background:url('/Content/PsychOfSleep/images/bedroom.jpg') no-repeat;
-            margin: 0px; margin-left:15px; height:576px;width:1024px" id="canvas">
+        <div class="canvas" style="background:url('/Content/PsychOfSleep/images/bedroom.jpg') no-repeat; height:576px;width:1024px" id="canvas">
         </div>
         <div id="notify">
             <div id="notify_title" class="notify_title">
