--- a/ApexZero.com/Views/PsychOfSleep/index.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/index.cshtml
@@ -144,3 +144,13 @@
     </p>
     <a href="/PsychOfSleep/SleepGame"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a>
 }
+
+@section sec_art_3 {
+    <p><strong>See the full list of available articles.</strong></p>
+    <p>
+        In case you missed any of the articles posted here or just want to have
+        a quick reference, see a full list of articles by clicking the image below.
+    <p>
+    </p>
+    <a href="/PsychOfSleep/SleepGame"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a>
+}
