--- a/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
@@ -10,6 +10,8 @@
         <div class="transbox">
             <h1>@Html.Raw(ViewBag.articleTitle)</h1>
             <p>@Html.Raw(ViewBag.articleBody)</p>
+            <br />
+            <p><a href="@Html.Raw(ViewBag.articleURL)">Read more</a></p>
         </div>
     </div>
     <br class="clear" />
