--- a/ApexZero.com/Views/PsychOfSleep/index.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/index.cshtml
@@ -10,7 +10,7 @@
         <p>
             New research shows that shortness of sleep speeds up the aging 
             process of the brain.<br />
-            <a href="http://www.medicalnewstoday.com/articles/279010.php">
+            <a href="/PsychOfSleep/StyleDemo?articleId=5">
                 Continue Reading &raquo;
             </a>
         </p>
@@ -25,7 +25,7 @@
             New research shows that we are much more suceptible to "remembering" 
             things that never acutally happened with lack of sleep.
             <br />
-            <a href="http://www.medicalnewstoday.com/articles/280152.php">
+            <a href="/PsychOfSleep/StyleDemo?articleId=6">
                 Continue Reading &raquo;
             </a>
         </p>
@@ -40,7 +40,7 @@
             Do you often find yourself falling asleep in those early-afternoon 
             classes? Learn some tips to avoid falling asleep.
             <br />
-            <a href="http://greatist.com/happiness/boost-energy-midday">
+            <a href="/PsychOfSleep/StyleDemo?articleId=7">
                 Continue Reading &raquo;
             </a>
         </p>
@@ -52,17 +52,7 @@
     <div class="panel-overlay">
         <h2>Sleep and your Immune System</h2>
         <p>Beyond simply knowing that being sick leads to being more sleepy.<br />
-        <a href="http://www.medicalnewstoday.com/releases/278191.php">Continue Reading &raquo;</a>
-        </p>
-    </div>
-}
-
-@section featured_5 {
-    <img src="/Content/PsychOfSleep/images/alarm.jpg" alt="" />
-    <div class="panel-overlay">
-        <h2>Sleep and your Immune System</h2>
-        <p>Beyond simply knowing that being sick leads to being more sleepy.<br />
-        <a href="http://www.medicalnewstoday.com/releases/278191.php">Continue Reading &raquo;</a>
+        <a href="/PsychOfSleep/StyleDemo?articleId=8">Continue Reading &raquo;</a>
         </p>
     </div>
 }
@@ -70,9 +60,9 @@
 @section latest_2 {
     <img src="/Content/PsychOfSleep/images/sleepchart.jpg" alt="" />
     <p>
-        <strong><a href="http://www.medicalnewstoday.com/articles/277016.php">
-            Lose Weight While You Sleep!
-        </a></strong>
+        <strong><a href="/PsychOfSleep/StyleDemo?articleId=9">
+    Lose Weight While You Sleep!
+</a></strong>
         Okay, not quite, but there are some pretty interesting links 
         surfacing regarding the amount of sleep you get and your waistline.
     </p>
@@ -80,9 +70,9 @@
 
 @section latest_1 {
     <img src="/Content/PsychOfSleep/images/explode.jpg" alt="" />
-    <p><strong><a href="http://www.sleepassociation.org/?p=explodingheadsyndrome">
-        Exploding Head Symdrome
-    </a></strong>
+    <p><strong><a href="/PsychOfSleep/StyleDemo?articleId=10">
+    Exploding Head Symdrome
+</a></strong>
         Just when you thought you'd heard of every possible sleep disorder around, 
         this one takes the cake with its name alone!.
     </p>
@@ -121,7 +111,7 @@
     <p>Are babbies who wake in the middle of the night to breastfeed actually</p>
     <p>trying to delay the birth of a sibling???</p>
     <p class="readmore">
-        <a href="http://www.medicalnewstoday.com/releases/275341.php">
+        <a href="/PsychOfSleep/StyleDemo?articleId=11">
             Continue Reading &raquo;
         </a>
     </p>
@@ -142,11 +132,11 @@
         In case you missed any of the articles posted here or just want to have
         a quick reference, see a full list of articles by clicking the image below.<p>
     </p>
-    <a href="/PsychOfSleep/SleepGame"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a>
+    <a href="/PsychOfSleep/StyleDemo?articleId=-1"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a>
 }
 
 @section sec_art_3 {
-    <p><strong>See the full list of available articles.</strong></p>
+    <p><strong>At some point, I will need to put something else here.</strong></p>
     <p>
         In case you missed any of the articles posted here or just want to have
         a quick reference, see a full list of articles by clicking the image below.
