--- a/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
@@ -20,9 +20,6 @@
                         <li>
                             @RenderSection("featured_4",false)
                         </li>
-                        <li>
-                            @RenderSection("featured_5",false)
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -45,8 +42,12 @@
 
     <div class="wrapper">
         <div id="adblock">
-            <div class="fl_left"><a href="#"><img src="/Content/PsychOfSleep/images/ss2.jpg" alt="" /></a></div>
-            <div class="fl_right"><a href="#"><img src="/Content/PsychOfSleep/images/ss3.jpg" alt="" /></a></div>
+            <div class="fl_left"><a href="http://en.wikipedia.org/wiki/Sleep_spindle">
+                <img src="/Content/PsychOfSleep/images/ss2.jpg" alt="" /></a>
+            </div>
+            <div class="fl_right"><a href="http://en.wikipedia.org/wiki/Actigraphy">
+                <img src="/Content/PsychOfSleep/images/ss3.jpg" alt="" />
+            </a></div>
             <br class="clear" />
         </div>
         <div id="hpage_cats">
