--- a/ApexZero.com/Views/PsychOfSleep/Layout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="fl_left">
                 @RenderSection("page_title",false)
             </div>
-            <div class="fl_right"><a href="#"><img src="/Content/PsychOfSleep/images/ss1.png" alt="" /></a></div>
+            <div class="fl_right"><a href="#"><img src="/Content/PsychOfSleep/images/mri.jpg" alt="" /></a></div>
             <br class="clear" />
         </div>
     </div>
