--- a/ApexZero.com/Views/PsychOfSleep/index.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/index.cshtml
@@ -1,146 +1,167 @@
 @{ 
-    Layout = ViewBag.Layout;
-    Page.Title = "";     
+  Layout = ViewBag.Layout;
+  Page.Title = "";
 }
 
 @section featured_1 {
-    <img src="/Content/PsychOfSleep/images/wom.jpg" alt="" />
-    <div class="panel-overlay">
-        <h2>Sleep Deprivation Ages Brain</h2>
-        <p>
-            New research shows that shortness of sleep speeds up the aging 
-            process of the brain.<br />
-            <a href="/PsychOfSleep/StyleDemo?articleId=5">
-                Continue Reading &raquo;
-            </a>
-        </p>
-    </div>
+  <img src="/Content/PsychOfSleep/images/old.jpg" alt="" />
+  <div class="panel-overlay">
+    <h2>Sleep Deprivation Ages Brain</h2>
+    <p>
+      Shortness of sleep linked to increased aging in the brain.
+      <br />
+      <a href="/PsychOfSleep/StyleDemo?articleId=5"> Continue Reading &raquo;
+      </a>
+    </p>
+  </div>
 }
 
 @section featured_2 {
-    <img src="/Content/PsychOfSleep/images/brain1.jpg" alt="" />
-    <div class="panel-overlay">
-        <h2>Lack of Sleep and False Memories</h2>
-        <p> 
-            New research shows that we are much more suceptible to "remembering" 
-            things that never acutally happened with lack of sleep.
-            <br />
-            <a href="/PsychOfSleep/StyleDemo?articleId=6">
-                Continue Reading &raquo;
-            </a>
-        </p>
-    </div>
+  <img src="/Content/PsychOfSleep/images/brain1.jpg" alt="" />
+  <div class="panel-overlay">
+    <h2>Lack of Sleep and False Memories</h2>
+    <p> 
+      Lack of sleep increases our vulnerability to remembering things that 
+      never happened!
+      <br />
+      <a href="/PsychOfSleep/StyleDemo?articleId=6">Continue Reading&raquo;</a>
+    </p>
+  </div>
 }
 
 @section featured_3 {
-    <img src="/Content/PsychOfSleep/images/wom.jpg" alt="" />
-    <div class="panel-overlay">
-        <h2>How to Stay Awake In Class</h2>
-        <p>
-            Do you often find yourself falling asleep in those early-afternoon 
-            classes? Learn some tips to avoid falling asleep.
-            <br />
-            <a href="/PsychOfSleep/StyleDemo?articleId=7">
-                Continue Reading &raquo;
-            </a>
-        </p>
-    </div>
+  <img src="/Content/PsychOfSleep/images/wom.jpg" alt="" />
+  <div class="panel-overlay">
+    <h2>How to Stay Awake In Class</h2>
+    <p>
+      Do you often find yourself falling asleep in those early-afternoon 
+      classes?
+      <br />
+      <a href="/PsychOfSleep/StyleDemo?articleId=7"> Continue Reading &raquo;
+      </a>
+    </p>
+  </div>
 }
 
 @section featured_4 {
-    <img src="/Content/PsychOfSleep/images/headerphoto1.jpg" alt="" />
-    <div class="panel-overlay">
-        <h2>Sleep and your Immune System</h2>
-        <p>Beyond simply knowing that being sick leads to being more sleepy.<br />
-        <a href="/PsychOfSleep/StyleDemo?articleId=8">Continue Reading &raquo;</a>
-        </p>
-    </div>
+  <img src="/Content/PsychOfSleep/images/headerphoto1.jpg" alt="" />
+  <div class="panel-overlay">
+    <h2>Sleep and your Immune System</h2>
+    <p>Beyond simply knowing that being sick leads to being more sleepy.<br />
+    <a href="/PsychOfSleep/StyleDemo?articleId=8">Continue Reading &raquo;</a>
+    </p>
+  </div>
 }
 
+
 @section latest_2 {
-    <img src="/Content/PsychOfSleep/images/sleepchart.jpg" alt="" />
-    <p>
-        <strong><a href="/PsychOfSleep/StyleDemo?articleId=9">
-    Lose Weight While You Sleep!
-</a></strong>
-        Okay, not quite, but there are some pretty interesting links 
-        surfacing regarding the amount of sleep you get and your waistline.
-    </p>
+  <img src="/Content/PsychOfSleep/images/sleepchart.jpg" alt="" />
+  <p><strong>
+    <a href="/PsychOfSleep/StyleDemo?articleId=9">Lose Weight While You Sleep!
+    </a></strong>
+    Okay, not quite, but there are some pretty interesting links 
+    surfacing regarding the amount of sleep you get and your waistline.
+  </p>
 }
 
 @section latest_1 {
-    <img src="/Content/PsychOfSleep/images/explode.jpg" alt="" />
-    <p><strong><a href="/PsychOfSleep/StyleDemo?articleId=10">
-    Exploding Head Symdrome
-</a></strong>
-        Just when you thought you'd heard of every possible sleep disorder around, 
-        this one takes the cake with its name alone!.
-    </p>
+  <img src="/Content/PsychOfSleep/images/explode.jpg" alt="" />
+  <p>
+    <strong><a href="/PsychOfSleep/StyleDemo?articleId=10">Exploding Head 
+      Symdrome
+    </a></strong>
+    Just when you thought you'd heard of every possible sleep disorder around, 
+    this one takes the cake with its name alone!.
+  </p>
 }
 
 @section art_top_left {
-    <h2><a href="#">Disorders&raquo;</a></h2>
-    <img src="/Content/PsychOfSleep/images/zzz.jpg" alt="" />
-    <p><strong><a href="#">Headline RE: Topic</a></strong></p>
-    <p>Some content would go here.</p>
+  <h2><a href="#">Disorders&raquo;</a></h2>
+  <img src="/Content/PsychOfSleep/images/zzz.jpg" alt="" />
+  <p><strong><a href="/PsychOfSleep/StyleDemo?articleId=12">
+    Is a sleep disorder affecting you?</strong></p>
+  <p>There are many sleep disorders that vary wildly in their symptoms. 
+  You may be suffering from a disorder and not even know it!</p>
 }
 
 @section art_top_right {
-    <h2><a href="#">Wellness&raquo;</a></h2>
-    <img src="/Content/PsychOfSleep/images/gn.jpg" alt="" />
-    <p><strong><a href="#">Headline RE: Topic</a></strong></p>
-    <p>Some content would go here.</p>
+  <h2><a href="#">Wellness&raquo;</a></h2>
+  <img src="/Content/PsychOfSleep/images/gn.jpg" alt="" />
+  <p><strong><a href="/PsychOfSleep/StyleDemo?articleId=13">
+    Coffee and Your Test Scores
+  </a></strong></p>
+  <p>
+    How does the country's most widly used narcotic affect your test scores?.
+  </p>
 }
 
 @section art_bottom_left {
-    <h2><a href="#">Self Help&raquo;</a></h2>
-    <img src="/Content/PsychOfSleep/images/help.jpg" alt="" />
-    <p><strong><a href="#">Headline RE: Topic</a></strong></p>
-    <p>Some content would go here.</p>
+  <h2><a href="#">Self Help&raquo;</a></h2>
+  <img src="/Content/PsychOfSleep/images/help.jpg" alt="" />
+  <p><strong><a href="/PsychOfSleep/StyleDemo?articleId=14">
+    Tips for a better night sleep.
+  </a></strong></p>
+  <p>
+    From the simplest and obvious tricks to ideas that you may never consider
+    would improve your night's sleep.
+  </p>
 }
 
 @section art_bottom_right {
-    <h2><a href="#">Etcetera&raquo;</a></h2>
-    <img src="/Content/PsychOfSleep/images/etc.jpg" alt="" />
-    <p><strong><a href="#">Headline RE: Topic</a></strong></p>
-    <p>Some content would go here.</p>
+  <h2><a href="#">Etcetera&raquo;</a></h2>
+  <img src="/Content/PsychOfSleep/images/etc.jpg" alt="" />
+  <p><strong><a href="/PsychOfSleep/StyleDemo?articleId=15">
+    Lunar Rythm.
+  </a></strong></p>
+  <p>
+    New and seemingly puzzling research shows that not only is our sleep 
+    affected by a Circadian rythym, but by the effects of the moon's position 
+    as well!
+  </p>
 }
 
 @section latest_3 {
-    <img src="/Content/PsychOfSleep/images/stewie.jpg" alt="" />
-    <p>Are babbies who wake in the middle of the night to breastfeed actually</p>
-    <p>trying to delay the birth of a sibling???</p>
-    <p class="readmore">
-        <a href="/PsychOfSleep/StyleDemo?articleId=11">
-            Continue Reading &raquo;
-        </a>
-    </p>
+  <img src="/Content/PsychOfSleep/images/stewie.jpg" alt="" />
+  <p>
+    Are babbies who wake in the middle of the night to breastfeed actually 
+    trying to delay the birth of a sibling???
+  </p>
+  <p class="readmore">
+    <a href="/PsychOfSleep/StyleDemo?articleId=11">
+      Continue Reading &raquo;
+    </a>
+  </p>
 }
 
 @section sec_art_1 {
-    <p><strong>Play the sleep game!</strong></p>
-    <p>Many of us are not aware of all the distracting elements we have in our
+  <p><strong>Play the sleep game!</strong></p>
+  <p>
+    Many of us are not aware of all the distracting elements we have in our
     bedrooms that can prevent us from getting a good night's sleep.
     Click the image below and see if you can identify all the common bedroom
-    items that may be impacting the quality of your sleep.</p>
-    <a href="/PsychOfSleep/SleepGame"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a>
+    items that may be impacting the quality of your sleep.
+  </p>
+  <a href="/PsychOfSleep/SleepGame">
+    <img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" />
+  </a>
 }
 
 @section sec_art_2 {
-    <p><strong>See the full list of available articles.</strong></p>
-    <p>
-        In case you missed any of the articles posted here or just want to have
-        a quick reference, see a full list of articles by clicking the image below.<p>
-    </p>
-    <a href="/PsychOfSleep/StyleDemo?articleId=-1"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a>
+  <p><strong>See the full list of available articles.</strong></p>
+  <p>
+    In case you missed any of the articles posted here or just want to have
+    a quick reference, see a full list of articles by clicking the image below.
+  </p>
+  <a href="/PsychOfSleep/StyleDemo?articleId=-1">
+    <img src="/Content/PsychOfSleep/images/news.png" alt="" />
+  </a>
 }
 
 @section sec_art_3 {
-    <p><strong>At some point, I will need to put something else here.</strong></p>
-    <p>
-        In case you missed any of the articles posted here or just want to have
-        a quick reference, see a full list of articles by clicking the image below.
-    <p>
-    </p>
-    <a href="/PsychOfSleep/SleepGame"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a>
+  <p><strong>Follow us on Social Media!</strong></p>
+  <p><a href="https://www.facebook.com/profile.php?id=100006676249009">
+      Facebook</a>
+  </p>
+  <p><a href="https://twitter.com/psychofsleep123">Twitter</a></p>
+  <a href="#"><img src="/Content/PsychOfSleep/images/sm.png" alt="" /></a>
 }
