--- a/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="transbox">
       <h1>@Html.Raw(ViewBag.articleTitle)</h1>
-      <p>@Html.Raw(ViewBag.articleBody)</p>
+      <p style="font-size:16px;">@Html.Raw(ViewBag.articleBody)</p>
       <br />
       <p><a href="@Html.Raw(ViewBag.articleURL)">Read more</a></p>
     </div>
