Small changes to verbage

--- a/ApexZero.com/Views/Home/Index.cshtml
+++ b/ApexZero.com/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @section body {
     <p style="margin-left: 20px">
-    @ViewBag.MOTD
+    You've reached our landing page. There's nothing much to see here but use
+    the navigation link on the top right to see some of our work. 
     </p>   
 }
 
