--- a/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
@@ -20,6 +20,9 @@
                         <li>
                             @RenderSection("featured_4",false)
                         </li>
+                        <li>
+                            @RenderSection("featured_5",false)
+                        </li>
                     </ul>
                 </div>
             </div>
