--- a/ApexZero.com/Views/PsychOfSleep/index.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/index.cshtml
@@ -53,6 +53,17 @@
   </div>
 }
 
+@section featured_5 {
+  <img src="/PsychOfSleep/SleepGame" alt="" />
+  <div class="panel-overlay">
+    <h2>Play the Sleep Distraction Game!</h2>
+    <p>See if you can find all the distractions that can prevent a good night's 
+    rest.<br />
+    <a href="/PsychOfSleep/SleepGame">Play now&raquo;</a>
+    </p>
+  </div>
+}
+
 
 @section latest_2 {
   <img src="/Content/PsychOfSleep/images/sleepchart.jpg" alt="" />
