Added image file

--- a/ApexZero.com/Views/PsychOfSleep/index.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/index.cshtml
@@ -54,7 +54,7 @@
 }
 
 @section featured_5 {
-  <img src="/PsychOfSleep/SleepGame" alt="" />
+  <img src="/Content/PsychOfSleep/images/game.png" alt="" />
   <div class="panel-overlay">
     <h2>Play the Sleep Distraction Game!</h2>
     <p>See if you can find all the distractions that can prevent a good night's 
