--- a/ApexZero.com/Views/PsychOfSleep/SleepGame.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/SleepGame.cshtml
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="err" id="noscript">
       <p><strong>
-        ERROR: You must enable Javascript for this game to work.
+        ERROR: You must enable Javascript for this game to work. Please enable javascript and refresh this page.
       </strong></p>
     </div>
     <div class="canvas" style="background:url('/Content/PsychOfSleep/images/bedroom.jpg') no-repeat; height:576px;width:1024px" id="canvas"></div>
