--- a/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
@@ -9,6 +9,11 @@
         "All articles","StyleDemo", "PsychOfSleep", new { articleId = "-1" }, 
         null 
     )</li>
+    <li>
+	<a href="https://www.facebook.com/pages/Psychofsleep_133/529968357131906#">
+		Visit Our Facebook Page
+	</a>
+    </li>
 }
 
 @section page_title {
