--- a/ApexZero.com/Views/PsychOfSleep/index.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/index.cshtml
@@ -88,9 +88,9 @@
 
 @section art_top_left {
   <h2><a href="#">Disorders&raquo;</a></h2>
-  <img src="/Content/PsychOfSleep/images/zzz.jpg" alt="" />
+  <img src="/Content/PsychOfSleep/images/zzz.jpeg" alt="" />
   <p><strong><a href="/PsychOfSleep/StyleDemo?articleId=12">
-    Is a sleep disorder affecting you?</strong></p>
+    Is a sleep disorder affecting you?</strong></p></a>
   <p>There are many sleep disorders that vary wildly in their symptoms. 
   You may be suffering from a disorder and not even know it!</p>
 }
@@ -170,9 +170,8 @@
 
 @section sec_art_3 {
   <p><strong>Follow us on Social Media!</strong></p>
-  <p><a href="https://www.facebook.com/profile.php?id=100006676249009">
+  <p><a href="https://www.facebook.com/pages/Psychofsleep_133/529968357131906#">
       Facebook</a>
   </p>
-  <p><a href="https://twitter.com/psychofsleep123">Twitter</a></p>
   <a href="#"><img src="/Content/PsychOfSleep/images/sm.png" alt="" /></a>
 }
