--- a/ApexZero.com/Views/Shared/_Layout.cshtml
+++ b/ApexZero.com/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body id="top" @RenderSection("_body_tags", false)>
     <div class="wrapper col0">
         <div id="topline">
-                <p>Apex Zero | it@apexzero.com</p>
+		<p><a href="mailto:it@apexzero.com?Subject=Website">Apex Zero</a> | <a href="mailto:it@apexzero.com?Subject=Website">Contact Us</a></p>
                 <ul>
                     @RenderSection("menu",true)
                 </ul>
@@ -25,8 +25,8 @@
     </div>
     <div class="wrapper col8">
         <div id="copyright">
-            <p class="fl_left">Copyright &copy; 2014 - All Rights Reserved - <a href="#">Apex Zero</a></p>
-            <p class="fl_right">CSS Template Modified from base <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+            <p class="fl_left">Copyright &copy; 2014 - All Rights Reserved - <a href="mailto:it@apexzero.com?Subject=Website">Apex Zero</a></p>
+	    <p class="fl_right">Template from <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a> modified by <a href="mailto:jwilkey@apexzero.com?Subject=Website">John Wilkey</a></p>
             <br class="clear" />
         </div>
     </div>
