--- a/ApexZero.com/Content/PsychOfSleep/styles/layout.css
+++ b/ApexZero.com/Content/PsychOfSleep/styles/layout.css
@@ -583,6 +583,11 @@ table.grxd {
     font-size: 16px;
 }
 
+.transbox a.aa {
+    margin: auto;
+    font-size: 14px;
+}
+
 table>td {
     margin:0;
     padding:0;
